--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
           <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-          <li class="nav-item "><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="#pricing" class="nav-link">Pricing</a></li>
+          <li class="nav-item"><a href="#testimonial" class="nav-link">Testimonial</a></li>
+          <li class="nav-item "><a href="#footer" class="nav-link">Footer</a></li>
         </ul>
       </header>
     </div> 
